--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -41,14 +41,14 @@
 										</form>
                     {{else}}
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROFILE <span class="caret"></span></a>
+                                            <a href="#" id="profile-text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROFILE <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
                                                 <li><p class="profile-username">Hello {{currentUser.profile.firstName}}</p></li>
                                                 <li role="separator" class="divider"></li>
-                                                <li><a class="profile-links" href="{{pathFor route = 'profileSettings'}}"><i class="fa fa-cog"></i>&nbsp; Settings</a></li>
-                                                <li><a class="profile-links" href="{{pathFor route = 'adminNewsEventsList'}}"><i class="fa fa-lock"></i>&nbsp; News &amp; Events</a></li>
-                                                <li><a class="profile-links" href="{{pathFor route = 'adminPublicationsList'}}"><i class="fa fa-lock"></i>&nbsp; Publications</a></li>
-                                                <li><a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-lock"></i>&nbsp; Members</a></li>
+                                                <li><a class="profile-links" href="{{pathFor route = 'profileSettings'}}"><i class="fa fa-cog profile-icons"></i>&nbsp; Settings</a></li>
+                                                <li><a class="profile-links" href="{{pathFor route = 'adminNewsEventsList'}}"><i class="fa fa-newspaper-o profile-icons"></i>&nbsp; News &amp; Events</a></li>
+                                                <li><a class="profile-links" href="{{pathFor route = 'adminPublicationsList'}}"><i class="fa fa-file-text-o profile-icons"></i>&nbsp; Publications</a></li>
+                                                <li><a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-users profile-icons"></i>&nbsp; Members</a></li>
 
                                               {{#if isInRole 'admin'}}
                                               <!-- <li>
