Add Button and polish Admin Sites

--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -1,5 +1,5 @@
 <template name="adminNewsEventsEdit">
-    <div class="container extra-spacing-bottom">
+    <div class="container extra-spacing-bottom extra-spacing-top">
 		<div class="putdown extra-spacing-bottom">
             <h1 class="extra-spacing-bottom">EDIT ENTRY</h1>
             <hr>
