--- a/client/templates/admin/admin-publications.html
+++ b/client/templates/admin/admin-publications.html
@@ -1,7 +1,7 @@
 <template name="adminPublications">
 	<!-- {{> formNewsEvents}} -->
 
-        <div class="container extra-spacing-top">
+        <div class="container extra-spacing-top extra-spacing-top">
 		<div class="putdown">
             <h1 class="extra-spacing-bottom">ADD A NEW PUBLICATION</h1>
             <hr>
