--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -35,7 +35,7 @@ body {
 
 hr {
 		max-width: 50px;
-		border-color: white;
+		border-color: @brand-primary;
 		border-width: 2px;
 		margin-bottom: 20px;
 		margin-top: 15px;
@@ -283,6 +283,9 @@ p.interests {
 		margin-top: 0px;
 }
 
+a:link admin-button {
+    color: white;
+}
 
 // Links
 
@@ -342,6 +345,11 @@ a.active {
 
 // Restyled Primary Buttons
 
+.btn-add {
+    margin-bottom: 15px;
+}
+
+
 .btn-primary {
 		background-color: @brand-primary;
 		border: 0;
@@ -379,6 +387,7 @@ a.active {
     font-size: 14px;
     font-weight: 400;
     border-radius: 0;
+    color: @brand-primary;
 }
 
 .btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .open > .dropdown-toggle.btn-danger {
@@ -624,10 +633,6 @@ aside {
         cursor: pointer;
 }
 
-// .profile-icons {
-//     align-content: center;
-// }
-
 
 .dropdown-menu > li > a.profile-links {
     color: @brand-primary;
@@ -756,6 +761,9 @@ header.home {
         text-shadow: 0 0 1px #666666;
         a {
             text-shadow: none;
+        }
+        hr {
+            color:white;
         }
 }
 
@@ -908,6 +916,9 @@ header .header-bibliography {
         a {
             text-shadow: none;
         }
+        hr {
+            color:white;
+        }
 }
 
 header .header-bibliography {
@@ -1007,6 +1018,9 @@ header {
         text-shadow: 0 0 1px #666666;
         a {
             text-shadow: none;
+        }
+        hr {
+            color:white;
         }
 }
 
