--- a/client/templates/admin/admin-news-events-edit.html
+++ b/client/templates/admin/admin-news-events-edit.html
@@ -26,10 +26,10 @@
 		            <label for="description" class="col-sm-2 control-label">Type</label>
 		            <div class="col-sm-10">
 		                <div class="radio">
-		                  <label><input type="radio" name="netype" value="news">News</label>
+		                  <label><input type="radio" name="netype" value="news" {{isChecked 'news'}}>News</label>
 		                </div>
 		                <div class="radio">
-		                  <label><input type="radio" name="netype" value="event">Event</label>
+		                  <label><input type="radio" name="netype" value="event" {{isChecked 'event'}}>Event</label>
 		                </div>
 		            </div>
 		        </div>
@@ -42,11 +42,11 @@
 
 				{{else}}
 				<div class="form-group">
-		            <label for="coverImage" class="col-sm-2 control-label">Image</label>
-		            <div class="col-sm-10">
-	                	<input type="file" id="coverImage">
-		            </div>
-		        </div>
+          <label for="coverImage" class="col-sm-2 control-label">Image</label>
+          <div class="col-sm-10">
+            	<input type="file" id="coverImage">
+          </div>
+        </div>
 				{{/if}}
 
 				{{#if attachmentExists}}
@@ -54,16 +54,14 @@
 					<a href="{{ attachment.url }}">{{attachment.original.name}}  </a>
 					<button type="button" id="js-delete-attachment" class="btn btn-danger"><i class="fa fa-trash"></i></button>
 				</li>
-		        {{else}}
-		         <div class="form-group">
-		            <label for="attachment" class="col-sm-2 control-label">Attachment</label>
-
-
-		            <div class="col-sm-10">
-	                	<input type="file" id="attachment">
-		            </div>
-		        </div>
-		        {{/if}}
+        {{else}}
+         <div class="form-group">
+            <label for="attachment" class="col-sm-2 control-label">Attachment</label>
+            <div class="col-sm-10">
+              	<input type="file" id="attachment">
+            </div>
+        </div>
+        {{/if}}
 
 				<hr>
 
