--- a/client/templates/admin/admin-publications-edit.html
+++ b/client/templates/admin/admin-publications-edit.html
@@ -133,7 +133,20 @@
             <button type="submit" id="js-addEntry" class="btn btn-primary">UPDATE ENTRY</button>
           </div>
         </div>
-
+        
+        {{#if attachmentExists}}
+        <li>
+          <a href="{{ attachment.url }}">{{attachment.original.name}}  </a>
+          <button type="button" id="js-delete-attachment" class="btn btn-danger"><i class="fa fa-trash"></i></button>
+        </li>
+        {{else}}
+        <div class="form-group">
+          <label for="attachment" class="col-sm-2 control-label">Attachment</label>
+          <div class="col-sm-10">
+            <input type="file" id="attachment">
+          </div>
+        </div>
+        {{/if}}
       </form> <!-- end form -->
 
       {{/with}}
