--- a/client/templates/admin/admin-publications-lists.html
+++ b/client/templates/admin/admin-publications-lists.html
@@ -5,7 +5,7 @@
             <hr>
             <div class="row">
     			<div class="col-md-6 col-md-offset-3">
-                    <button type="button" class="btn btn-primary btn-add"><i class="fa fa-plus-circle">  Add new entry</i></button>
+                    <a class="btn btn-primary btn-add" href="{{pathFor route='adminPublications'}}"><i class="fa fa-plus-circle">  Add new entry</i></a>
     				{{#each publicationsData}}
     				<ul class="list-group">
     					<li class="list-group-item">
