--- a/client/templates/admin/admin-publications.html
+++ b/client/templates/admin/admin-publications.html
@@ -133,6 +133,13 @@
         </div>
       </div>
 			{{/if}}
+      
+      <div class="form-group">
+       <label for="attachment" class="col-sm-2 control-label">Attachment</label>
+       <div class="col-sm-10">
+          <input type="file" id="attachment">
+       </div>
+     </div>
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
