--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -1,22 +1,4 @@
 <template name="allNewsEvents">
-	<!-- <div class="container">
-		<div class="row">
-			{{#each newsEventsData}}
-			<li>{{title}}</li>
-			<a href="{{pathFor route='newsAndEventsPage'}}">read more</a>
-
-			<a href ="/news-and-events/{{ _id }}">
-				<img alt="" src="{{ coverImage.url }}" />
-			</a>
-
-			<li><a href="{{ attachment.url }}">{{attachment.original.name}}</a></li>
-
-			<hr>
-			{{/each}}
-
-		</div>
-	</div> -->
-
 	<!-- Stage -->
   <header>
     <div class="header-content">
@@ -62,7 +44,7 @@ related news are warmly welcome. In order to add news to this section, please se
 				<div class="col-sm-4">
 					<div class="caption">
 					{{#if imageExists}}
-						<h4>{{coverImage}} {{title}}<img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" /></h4>
+						<h4>{{title}}<img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" /></h4>
 					{{else}}
 						<h4>{{title}}</h4>
 					{{/if}}
