--- a/client/templates/guests/newsEventsPage.html
+++ b/client/templates/guests/newsEventsPage.html
@@ -25,10 +25,14 @@
 								<h3 class="text-left extra-spacing-bottom">{{title}}</h3>
 								{{/if}}
 								<div class="extra-spacing-bottom">{{{description}}} </div>
+								{{#if attachmentExists}}
 								<div class="btn btn-primary btn-icon">
 									<span class="glyphicon glyphicon-download"></span> ATTACHMENT
 								</div>
-							</div> <!-- ./ Info-->
+								<a class="btn btn-primary btn-icon" href="{{ attachment.url }}"><span class="glyphicon glyphicon-download"></span>ATTACHMENT</a>
+								{{/if}}
+							</div> 
+							<!-- ./ Info-->
 							<!-- Back-Button 2 -->
 							<div class="col-sm-2 col-sm-offset-1 col-xs-12">
 									<div class="btn btn-primary btn-icon js-back">
