--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -291,7 +291,7 @@ a:link admin-button {
 
 
 
-a:link {
+a:not(.btn):link {
 		color: @brand-primary;
 		text-decoration: none;
 		font-size: 16px;
