News&Events: Added "object-fit: cover" to news-thumbnail

--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1205,8 +1205,12 @@ ul.list-inline.quicklinks {
 		margin-top: 5px;
 		padding: 0 0 0 0;
 		float:left;
-		height: 75px;
-		width: 90px;
+		// height: 75px;
+		// width: 90px;
+        object-fit: cover;
+        object-position: top;
+        width: 90px;
+        height: 75px;
 }
 
 .contact-thumbnail {
