--- a/client/templates/account-templates/joinus.html
+++ b/client/templates/account-templates/joinus.html
@@ -57,6 +57,10 @@
         <form>
             {{> atForm state='signUp'}}
         </form>
+        ssss
+        <form>
+            {{> atForm state='signIn'}}
+        </form>
     </div>
   </section>
 
