--- a/client/templates/members/bibliographyPage.html
+++ b/client/templates/members/bibliographyPage.html
@@ -23,9 +23,12 @@
 							<p class="text-muted extra-spacing-bottom"> {{#each authors}} {{this.firstName}} {{this.lastName}}. {{/each}} {{title}}. {{year}}.</p>
 							<h3 class="text-left">Abstract</h3>
 							<p class="extra-spacing-bottom">{{abstract}}</p>
+							{{#if attachmentExists}}
 							<button type="button" class="btn btn-primary btn-icon">
-											<span class="glyphicon glyphicon-download"></span> DOWNLOAD
+									<span class="glyphicon glyphicon-download"></span> DOWNLOAD
 							</button>
+							<a class="btn btn-primary btn-icon" href="{{ attachment.url }}"><span class="glyphicon glyphicon-download"></span>DOWNLOAD</a>
+							{{/if}}
 					</div> <!-- ./Abstract -->
 					<!-- Back-Button 2 -->
 					<div class="col-sm-2 col-sm-offset-1 col-xs-12">
