Hackpad To Dos, added About to navber

--- a/client/templates/guests/contact.html
+++ b/client/templates/guests/contact.html
@@ -33,8 +33,8 @@ allowing us to keep our website up-to-date.</h2>
 				<div class="row text-center extra-spacing-top">
 					<div class="col-sm-6">
 						<div class="team-member">
-							<img class="contact-thumbnail" src="img/seidl.jpg" alt="Prof. David Seidl">
-							<h4>Prof. David Seidl</h4>
+							<img class="contact-thumbnail" src="img/seidl.jpg" alt="David Seidl">
+							<h4>David Seidl</h4>
 							<p class="text-muted">Overall Coordination</p>
 							<ul class="list-inline social-buttons">
 								<li>
