--- a/client/templates/guests/newsEventsPage.html
+++ b/client/templates/guests/newsEventsPage.html
@@ -26,12 +26,12 @@
 								{{/if}}
 								<div class="extra-spacing-bottom">{{{description}}} </div>
 								{{#if attachmentExists}}
-								<div class="btn btn-primary btn-icon">
+								<div class="btn btn-primary btn-icon extra-spacing-top">
 									<span class="glyphicon glyphicon-download"></span> ATTACHMENT
 								</div>
-								<a class="btn btn-primary btn-icon" href="{{ attachment.url }}"><span class="glyphicon glyphicon-download"></span>ATTACHMENT</a>
+								<a class="btn btn-primary btn-icon extra-spacing-top" href="{{ attachment.url }}"><span class="glyphicon glyphicon-download"></span>ATTACHMENT</a>
 								{{/if}}
-							</div> 
+							</div>
 							<!-- ./ Info-->
 							<!-- Back-Button 2 -->
 							<div class="col-sm-2 col-sm-offset-1 col-xs-12">
