--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -125,14 +125,10 @@ hr.layer-light {
 }
 
 a.breadcrumb-link {
-		font-size: 12px;
-		color: @brand-primary-light;
+		font-size: 12px!important;
+		color: @brand-primary;
 }
 
-a.breadcrumb-link:link {
-		font-size: 12px;
-		color: @brand-primary-light;
-}
 
 a.breadcrumb-link:hover {
 		font-size: 12px;
@@ -1374,10 +1370,12 @@ tbody {
 }
 
 
-
 a.tbody-link {
-		font-size: 13px;
+		font-size: 13px!important;
 }
+
+
+
 
 /*.table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {
 		padding: 12px 8px 4px 8px;
