--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -17,6 +17,9 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav navbar-right">
+                                        <li>
+                                            <a href="#">About</a>
+                                        </li>
 										<li class="{{isActiveRoute name='allNewsEvents'}}">
 											<a href="{{pathFor route = 'allNewsEvents'}}">News &amp; Events</a>
 										</li>
