--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -14,12 +14,12 @@
 								<a class="navbar-brand" href="{{pathFor route = 'home'}}"><img src="img/osn_logoneu.png" class="img-responsive" alt="Open Strategy Network"></a>
 						</div>
 
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav navbar-right">
-                                        <li>
-                                            <a href="#">About</a>
-                                        </li>
+                    <li class="{{isActiveRoute name='aboutUs'}}">
+                      <a href="{{pathFor route = 'aboutUs'}}">About</a>
+                    </li>
 										<li class="{{isActiveRoute name='allNewsEvents'}}">
 											<a href="{{pathFor route = 'allNewsEvents'}}">News &amp; Events</a>
 										</li>
