--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1695,3 +1695,8 @@ section.layer-login {
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
     max-height: inherit;
 }
+
+.bert-alert.osWarning {
+  background: @brand-primary;
+  color: #fff;
+}
